tests/rosetta/out/Haskell/bioinformatics-sequence-mutation.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/bioinformatics-sequence-mutation.hs:167:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/bioinformatics-sequence-mutation.hs:162:1
                 /workspace/mochi/tests/rosetta/out/Haskell/bioinformatics-sequence-mutation.hs:167:1
    |
167 | main = do
    | ^^^^
